# serialization

./: CMakeLists.txt
src/: bit.h  bitmap.h  instream.h  outstream.h  serializer.h  span.h
src/util/: types.h
